# python-project-52

./: .coverage  Dockerfile  Makefile  README.md  coverage.xml  db.sqlite3  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  setup.cfg
.github/workflows/: my_personal_actions.yml
labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: admin.py  apps.py  forms.py  settings.py  urls.py  utils.py  views.py
task_manager/labels/: admin.py  apps.py  forms.py  tests.py  urls.py  views.py
task_manager/statuses/: apps.py  forms.py  urls.py  views.py
task_manager/statuses/tests/: tests.py
task_manager/tasks/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0006_alter_task_executor_alter_task_labels.py  0007_remove_task_labels_task_labels.py
task_manager/templates/: index.html  layout.html  login_form.html  register_form.html
task_manager/templates/labels/: label_create.html  label_delete.html  (+2 more)
task_manager/users/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_creator.py  0003_alter_task_creator_alter_task_executor_and_more.py  0004_alter_task_executor.py  0005_alter_task_executor_alter_task_labels.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+14 files in other folders)
