[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = ""
authors = ["Anisimoff <happyprooo@gmail.com>"]
readme = "README.md"
packages = [
    {include = "task_manager"},
    {include = "labels"},
    {include = "statuses"},
    {include = "tasks"},
    {include = "users"},
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
gunicorn = "^21.2.0"
flake8 = "^4.0.1"
django-bootstrap4 = "^23.2"
whitenoise = "^6.5.0"
django-extensions = "^3.2.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
rollbar = "^0.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

